syntax = "proto3";
package neo;

option go_package = "github.com/pomo-mondreganto/neo";

import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";

message TeamBucket {
    map<string, string> teams = 1;
}

message FileInfo {
    string uuid = 1;
}

message ExploitConfiguration {
    string entrypoint = 1;
    bool is_archive = 2;
    google.protobuf.Duration run_every = 3;
    google.protobuf.Duration timeout = 4;
}

message ExploitState {
    string exploit_id = 1;
    int64 version = 2;
    FileInfo file = 3;
    bool disabled = 4;
    bool endless = 5;
    ExploitConfiguration config = 6;
}

message Config {
    string farm_url = 1;
    string farm_password = 2;
    string flag_regexp = 3;
    google.protobuf.Duration ping_every = 4;
    google.protobuf.Duration submit_every = 5;
    repeated string environ = 6;
}

message ServerState {
    // Ping distribution by client
    map<string, TeamBucket> client_team_map = 1;
    repeated ExploitState exploits = 2;
    Config config = 3;
}

message FileStream {
    bytes chunk = 1;
}

message LogLine {
    string exploit = 1;
    int64 version = 2;
    string message = 3;
    string level = 4;
    string team = 5;
}

message PingRequest {
    enum PingType {
        CONFIG_REQUEST = 0;
        HEARTBEAT = 1;
        LEAVE = 2;
    };

    PingType type = 1;
    string client_id = 2;
    int32 weight = 3;
}

message PingResponse {
    ServerState state = 1;
}

message ExploitRequest {
    string exploit_id = 1;
}

message ExploitResponse {
    ExploitState state = 1;
}

message UpdateExploitRequest {
    ExploitState state = 1;
}

message UpdateExploitResponse {
    ExploitState state = 1;
}

message SingleRunRequest {
    string exploit_id = 1;
}

message Command {
    string command = 1;
}

message AddLogLinesRequest {
    repeated LogLine lines = 1;
}

message SearchLogLinesRequest {
    string exploit = 1;
    int64 version = 2;
}

message SearchLogLinesResponse {
    repeated LogLine lines = 1;
}

service ExploitManager {
    rpc Ping (PingRequest) returns (PingResponse) {}

    rpc UploadFile(stream FileStream) returns (FileInfo) {}
    rpc DownloadFile(FileInfo) returns (stream FileStream) {}

    rpc Exploit(ExploitRequest)  returns (ExploitResponse) {}
    rpc UpdateExploit(UpdateExploitRequest) returns (UpdateExploitResponse) {}

    rpc BroadcastCommand(Command) returns (google.protobuf.Empty) {}
    rpc BroadcastRequests(google.protobuf.Empty) returns (stream Command) {}

    rpc SingleRun(SingleRunRequest) returns (google.protobuf.Empty) {}
    rpc SingleRunRequests(google.protobuf.Empty) returns (stream SingleRunRequest) {}

    rpc AddLogLines(AddLogLinesRequest) returns (google.protobuf.Empty) {}
    rpc SearchLogLines(SearchLogLinesRequest) returns (stream SearchLogLinesResponse) {}
}
